kubernetes/apps/kyverno/kyverno/policys/ValidatingPolicy/default-deployment-has-multiple-replicas.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: deployment-has-multiple-replicas
  annotations:
    policies.kyverno.io/title: Require Multiple Replicas in ValidatingPolicy
    policies.kyverno.io/category: Sample in Vpol
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Deployment
    policies.kyverno.io/minversion: 1.14.0
    kyverno.io/kubernetes-version: "1.30"
    policies.kyverno.io/description: >-
      Deployments with a single replica cannot be highly available and thus the
      application may suffer downtime if that one replica goes down. This policy
      validates that Deployments have more than one replica.
spec:
  validationActions:
    - Deny
  evaluation:
    background:
      enabled: true
  matchConstraints:
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values:
            - kube-system
            - longhorn-system
            - network
            - cert-manager
            - cilium-secrets
            - cnpg-system
            - database
            - flux-system
            - kube-node-lease
            - kube-public
            - kyverno
            - observability
            - system-upgrade
            - travel
            - falco-operator
    resourceRules:
      - apiGroups:
          - apps
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - deployments
  validations:
    - expression: object.spec.replicas >= 2
      message: Deployments müssen mindestens 2 Replicas haben.
