kubernetes/apps/kyverno/kyverno/policys/ValidatingPolicy/default-disallow-privilege-escalation.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: disallow-privilege-escalation
  annotations:
    policies.kyverno.io/title: Disallow Privilege Escalation in ValidatingPolicy
    policies.kyverno.io/category: Pod Security Standards (Restricted) in ValidatingPolicy
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/minversion: 1.14.0
    kyverno.io/kyverno-version: 1.14.0
    kyverno.io/kubernetes-version: 1.30+
    policies.kyverno.io/description: >-
      Privilege escalation, such as via set-user-ID or set-group-ID file mode,
      should not be allowed. This policy ensures the allowPrivilegeEscalation
      field is set to false.
spec:
  validationActions:
    - Deny
  evaluation:
    background:
      enabled: true
  matchConstraints:
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values:
            - kube-system
            - longhorn-system
            - network
            - cert-manager
            - cilium-secrets
            - cnpg-system
            - database
            - flux-system
            - kube-node-lease
            - kube-public
            - kyverno
            - observability
            - system-upgrade
    resourceRules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - pods
  variables:
    - name: allContainers
      expression: >-
        object.spec.containers +
        object.spec.?initContainers.orValue([]) +
        object.spec.?ephemeralContainers.orValue([])
  validations:
    - expression: >-
        variables.allContainers.all(container,
          container.?securityContext.?allowPrivilegeEscalation.orValue(true) == false)
      message: >-
        Privilege escalation is disallowed. All containers must set the
        securityContext.allowPrivilegeEscalation field to false.
