kubernetes/apps/kyverno/kyverno/policys/ValidatingPolicy/default-readwriteonece-pod.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: readwriteonce-pod
  annotations:
    policies.kyverno.io/title: Enforce ReadWriteOncePod in ValidatingPolicy
    policies.kyverno.io/category: Sample in Vpol
    policies.kyverno.io/subject: PersistentVolumeClaim
    policies.kyverno.io/minversion: 1.14.0
    kyverno.io/kubernetes-version: 1.27-1.28
    policies.kyverno.io/description: >-
      This policy enforces that the accessModes for a PersistentVolumeClaim be
      set to ReadWriteOncePod.
spec:
  validationActions:
    - Deny
  evaluation:
    background:
      enabled: true
  matchConstraints:
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values:
            - kube-system
            - longhorn-system
            - network
            - cert-manager
            - cilium-secrets
            - cnpg-system
            - database
            - flux-system
            - kube-node-lease
            - kube-public
            - kyverno
            - observability
            - system-upgrade
    resourceRules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - persistentvolumeclaims
  validations:
    - expression: "'ReadWriteOncePod' in object.spec.accessModes"
      message: The accessMode must be set to ReadWriteOncePod.
