kubernetes/apps/kyverno/kyverno/policys/ValidatingPolicy/default-validate-probes.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: validate-probes
  annotations:
    policies.kyverno.io/title: Validate Probes in ValidatingPolicy
    policies.kyverno.io/category: Sample in Vpol
    policies.kyverno.io/severity: medium
    policies.kyverno.io/minversion: 1.14.0
    kyverno.io/kubernetes-version: "1.30"
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      This policy checks that liveness and readiness probes are not equal.
spec:
  validationActions:
    - Deny
  autogen:
    podControllers:
      controllers: []
  evaluation:
    background:
      enabled: false
  matchConstraints:
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values:
            - kube-system
            - longhorn-system
            - network
            - cert-manager
            - cilium-secrets
            - cnpg-system
            - database
            - flux-system
            - kube-node-lease
            - kube-public
            - kyverno
            - observability
            - system-upgrade
            - auth
    resourceRules:
      - apiGroups:
          - apps
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - deployments
          - daemonsets
          - statefulsets
  validations:
    - expression: >-
        !object.spec.template.spec.containers.exists(container,
          has(container.readinessProbe) &&
          has(container.livenessProbe) &&
          container.readinessProbe == container.livenessProbe)
      message: Liveness and readiness probes cannot be the same.
